WIP: xml2json